[Checkout] [TT-499] Fixes missing padding for mobiles in the box of address selection. The problem is that we have to use same classes for different markup that is there for logged-in and logged-out. This complicates CSS as well

--- a/src/components/checkout/checkout.scss
+++ b/src/components/checkout/checkout.scss
@@ -466,6 +466,21 @@ $checkout_store-pickup-selected-location_button-type: $button_default-type !defa
         }
     }
 
+    &__shipping-method-wrapper {
+        padding: $checkout_base-space;
+        box-shadow: $checkout_boxes-box-shadow;
+    }
+
+    &__step-tabs {
+        ~ #{$root}__shipping-method-wrapper {
+            @include media('<tablet') {
+                padding-left: 0;
+                padding-right: 0;
+                box-shadow: none;
+            }
+        }
+    }
+
     #store-selector {
         padding: $checkout_base-space;
 
